// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/analytics/table_chart.tsx should match snapshot, loaded with data 1`] = `
<div
  className="col-sm-6"
>
  <div
    className="total-count recent-active-users"
  >
    <div
      className="title"
    >
      Test
    </div>
    <div
      className="content"
    >
      <table>
        <tbody>
          <tr
            key="table-entry-test1"
          >
            <td>
              <WithTooltip
                title="test-tip1"
              >
                <span>
                  test1
                </span>
              </WithTooltip>
            </td>
            <td>
              <p>
                test-value1
              </p>
            </td>
          </tr>
          <tr
            key="table-entry-test2"
          >
            <td>
              <WithTooltip
                title="test-tip2"
              >
                <span>
                  test2
                </span>
              </WithTooltip>
            </td>
            <td>
              <p>
                test-value2
              </p>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`components/analytics/table_chart.tsx should match snapshot, loaded without data 1`] = `
<div
  className="col-sm-6"
>
  <div
    className="total-count recent-active-users"
  >
    <div
      className="title"
    >
      Test
    </div>
    <div
      className="content"
    >
      <table>
        <tbody />
      </table>
    </div>
  </div>
</div>
`;
